sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:8: error: value >- is not a member of Int
    while(i>-1){
           ^